Prevent roll dates from wrapping
Closes #1

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -152,6 +152,7 @@
 
 .roll-date {
   font-weight: normal;
+  white-space: nowrap;
 }
 
 .roll-info {
@@ -164,10 +165,6 @@
 
 .roll-item {
   margin: 20px 0;
-}
-
-.roll-preview {
-
 }
 
 .roll-sep {
